--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+.rotete{
+
+   transform: rotate(-45deg); 
+   height: 60px;
+   width: 130px;
+   margin-left: -50px;
+   margin-top: -5px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background-color: green;
+
+
+}
